<resources>
    <string name="app_name">TimeManager</string>
    <string name="date">Date</string>
    <string name="day_of_the_week">Day of the week</string>
    <string name="activite">ACTIVITY</string>
    <string name="start">Start</string>
    <string name="historique">History</string>
    <string name="type_your_activity">Type your activity here</string>
    <string name="type_your_activity_here">Type your activity here</string>
    <string name="HistoryTitle">HISTORY</string>

    <!-- Toast message in editor when new activity has been successfully inserted [CHAR LIMIT = NONE] -->
    <string name="editor_insert_activity_successful">Activity saved</string>


    <!--Toast message in editor when new activity has failed to be inserted [CHAR LIMIT = NONE] -->
    <string name="editor_insert_activity_failed">Error with saving activity</string>


    <!-- Toast message in editor when new instance has been successfully inserted [CHAR LIMIT = NONE] -->
    <string name="editor_insert_instance_successful">Instance saved</string>

    <!--Toast message in editor when new instance has failed to be inserted [CHAR LIMIT = NONE] -->
    <string name="editor_insert_instance_failed">Error with saving instance</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="activitytitle">ActivityTitle</string>
    <string name="activitydate">ActivityDate :</string>
    <string name="_0000_ms">0000 ms</string>

</resources>
